tests/src/frontend/expand/invalid/macro_duplicate3.sk
class C(x: Int) {
  macro fun m(): void {
    #forEachField (#field, #field) {
      #field
    }
  }
}

fun main(): void {
  void
}
